fix- remove scrollbar on firefox

--- a/SMCOM-FRONT/src/app/components/timelinepage/timelinepage.component.css
+++ b/SMCOM-FRONT/src/app/components/timelinepage/timelinepage.component.css
@@ -18,6 +18,10 @@ html,body{
 section::-webkit-scrollbar {
   display: none;
 }
+/* firefox scrollbar */
+section {
+  scrollbar-width: none;
+}
 
 .timelineHeight{
  height: calc(60vh);
